--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "markmap-toolbar": "^0.18.10",
     "markmap-view": "0.2.6",
     "parcel-bundler": "^1.6.1",
+    "prismjs": "^1.30.0",
     "prompt-sync": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-simple-code-editor": "^0.14.1",
     "react-toastify": "^11.0.3",
     "typescript": "^5.7.3",
     "uuid": "^11.1.0"
